edit(styles): Fixed styles of the old version scss

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,6 @@
 // Основные стили приложения
+@use "sass:color";
+
 :root {
   --primary-color: #4a6da7;
   --secondary-color: #f87c56;
@@ -35,7 +37,7 @@ body {
     background-color: var(--primary-color);
     color: white;
     &:hover {
-      background-color: darken(#4a6da7, 10%);
+      background-color: color.adjust(#4a6da7, $lightness: -10%);
     }
   }
   
@@ -43,7 +45,7 @@ body {
     background-color: var(--secondary-color);
     color: white;
     &:hover {
-      background-color: darken(#f87c56, 10%);
+      background-color: color.adjust(#f87c56, $lightness: -10%);
     }
   }
 }
